deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kustomize-webapp
  labels:
    app: hello-kustomize-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kustomize-webapp
  template:
    metadata:
      labels:
        app: hello-kustomize-webapp
    spec:
      containers:
      - name: hello-kustomize-webapp
        image: pcrete/gitops-argocd-demo:master-e66424e2
        ports:
          - containerPort: 5005
            protocol: TCP
        securityContext: {}
        imagePullPolicy: IfNotPresent
        resources: 
          requests:
            memory: 128Mi
            cpu: 20m
          limits:
            memory: 128Mi
            cpu: 20m
