service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-kustomize-webapp
  name: hello-kustomize-webapp
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5005
  selector:
    app: hello-kustomize-webapp
  type: ClusterIP
