route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-service
  labels:
    app: hello-kustomize-webapp
    app.kubernetes.io/instance: hello-service
spec:
  to:
    kind: Service
    name: hello-kustomize-webapp
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
